src/test/ui/error-codes/E0433.stderr
error[E0433]: failed to resolve: use of undeclared type or module `HashMap`
  --> $DIR/E0433.rs:2:15
   |
LL |     let map = HashMap::new();
   |               ^^^^^^^ use of undeclared type or module `HashMap`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
