src/test/ui/error-codes/E0433.rs
fn main () {
    let map = HashMap::new(); //~ ERROR E0433
}
